# zen_quake2

./: .gitignore  CMakeLists.txt  README.md
baseq2/models/monsters/berserk/: head.md2
baseq2/models/monsters/bitch/: head.md2
baseq2/models/monsters/boss1/: head.md2
baseq2/models/monsters/boss2/: head.md2
baseq2/models/monsters/boss3/jorg/: head.md2
baseq2/models/monsters/boss3/rider/: head.md2
baseq2/models/monsters/brain/: head.md2
baseq2/models/monsters/commandr/head/: head.md2
baseq2/models/monsters/flipper/: head.md2
baseq2/models/monsters/float/: head.md2
baseq2/models/monsters/gladiatr/: head.md2
baseq2/models/monsters/gunner/: head.md2
baseq2/models/monsters/hover/: head.md2
baseq2/models/monsters/infantry/: head.md2
baseq2/models/monsters/insane/: head.md2
baseq2/models/monsters/medic/: head.md2
baseq2/models/monsters/mutant/: head.md2
baseq2/models/monsters/parasite/: head.md2
baseq2/models/monsters/soldier/: head.md2
baseq2/models/monsters/tank/: head.md2
baseq2/models/weapons/v_flamer/: skin.tga  tris.md2
baseq2/models/weapons/v_kick/: skin.tga  tris.md2
baseq2/sprites/: fly_0.tga  fly_1.tga  s_fly.sp2
baseq2/textures/decals/: blood.tga  bullet.tga  energy.tga  footprint.tga  pool.tga  pool1.tga  pool2.tga  rail.tga  scorch.tga
src/client/: cl_cin.c  cl_ents.c  cl_fx.c  cl_input.c  cl_main.c  cl_parse.c  cl_scrn.c  cl_tent.c  cl_view.c  client.h  menu.c  ref.h  snd_dma.c  snd_mem.c
src/common/: cmd.c  cmodel.c  common.c  files.c  qcommon.h
src/ctf/: g_chase.c  g_cmds.c  g_ctf.c  g_local.h  g_save.c  g_spawn.c  g_utils.c  p_client.c  p_hud.c  p_menu.c  q_shared.c  q_shared.h
src/game/: g_ai.c  g_cmds.c  g_combat.c  g_items.c  g_kick.c  g_local.h  g_main.c  g_misc.c  g_monster.c  g_save.c  g_spawn.c  g_svcmds.c  g_utils.c  g_waves.c  g_weapon.c  m_gunner.c  m_infantry.c  m_medic.c  m_soldier.c  p_client.c  p_hud.c  p_view.c  p_weapon.c  q_shared.c  q_shared.h
src/null/: cd_null.c
src/platform/: cd_stub.c  cl_stub.c  in_sdl.c  net_sockets.c  quake2.rc  snd_sdl.c  sys_sdl.c  vid_menu.c  vid_sdl.c
src/qcommon/: qcommon.h
src/ref_gl3/: gl3_decals.c  gl3_draw.c  gl3_glimp.c  gl3_image.c  gl3_local.h  gl3_main.c  gl3_math.c  gl3_mesh.c  gl3_model.c  gl3_model.h  gl3_particles.c  gl3_post.c  gl3_screenshot.c  gl3_shaders.c  gl3_sky.c  gl3_surf.c  gl3_voxel.c
src/sdl/: net_sockets.c  sys_sdl.c
src/server/: ccmds.c  game.c  init.c  main.c  server.h  sv_world.c
tools/: gen_decals.py  gen_flamer_model.py  gen_fly_sprite.py  gen_heads.py  gen_kick_model.py  gen_pak.py  q2gen.py
